# mo

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
src/: cli.rs  config.rs  entity.rs  handlers.rs  main.rs  registry.rs  store.rs  weekly.rs
