[package]
name = "mo-cli"
description = "A work journal that takes seconds, not minutes"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "mo"
path = "src/main.rs"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.6.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
chrono = "0.4"
