[package]
name = "mo-cli"
description = "A work journal that takes seconds, not minutes"
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thekaushikls/mo"

[[bin]]
name = "mo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.6.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
chrono = "0.4"
